# rsfilc

./: Cargo.toml  README.hu.md  README.md
.github/workflows/: all-tests-slow.yml  build-artifacts-and-run-tests.yml  draft-release-automatic-trigger.yml
assets/: example-config.toml
src/: absences.rs  announced.rs  args.rs  cache.rs  config.rs  evals.rs  information.rs  main.rs  messages.rs  paths.rs  plotting.rs  schools.rs  time.rs  timetable.rs  user.rs  utils.rs
