[package]
name = "rsfilc"
version = "0.12.1"
description = "An E-Kréta console client from scratch."
keywords = ["kreta", "client", "hungarian"]
categories = ["command-line-interface"]
edition = "2024"
authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
repository = "https://codeberg.org/jark/rsfilc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ekreta = "0.3"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
fern = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "1.0"
nanohtml2text = "0.2"
ascii_table = { version = "4.0", features = [
  "auto_table_width",
  "color_codes",
] }
inquire = { version = "0.9", default-features = false, features = [
  "console",
] }
yansi = "1.0"
