[package]
name = "rsfilc"
version = "0.13.0"
description = "An E-Kréta console client from scratch."
keywords = ["kreta", "client", "hungarian"]
categories = ["command-line-interface"]
edition = "2024"
authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
repository = "https://codeberg.org/jark/rsfilc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ekreta = "0.4"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
fern = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = { version = "1.0", default-features = false, features = [
  "basic_toml_conf"
] }
nanohtml2text = "0.2"
ascii_table = { version = "4.0", features = [
  "auto_table_width",
  "color_codes",
  "wide_characters",
] }
inquire = { version = "0.9", default-features = false, features = [
  "console",
] }
yansi = "1.0"

[patch.crates-io]
ascii_table = { git = "https://gitlab.com/jark8/ascii-table", branch = "manual-color-code-parse" }
